<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_city_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".appmodules.citydetail.view.CityDetailActivity">

    <ImageView
        android:id="@+id/image_view_contact"
        android:transitionName="@string/contact_image_transition"
        android:layout_width="match_parent"
        android:layout_height="@dimen/contact_detail_image_view_height"
        android:src="@drawable/ic_contact"/>

    <TextView
        android:id="@+id/text_view_name_title"
        android:text="@string/city_detail_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/contact_detail_labels_text_size"
        android:textStyle="bold"/>

    <View
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/contact_detail_divider_height"
        android:background="@color/divider_color"
        android:layout_marginBottom="@dimen/contact_detail_divider_margin_bottom">
    </View>

    <TextView
        android:transitionName="@string/contact_name_transition"
        android:id="@+id/text_view_city_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Carlos"
        android:layout_alignParentTop="true"
        android:textSize="@dimen/contact_detail_labels_text_size"
        android:layout_marginBottom="@dimen/contact_detail_info_labels_margin_bottom"
        android:layout_marginLeft="@dimen/contact_detail_info_labels_margin_left"/>

    <TextView
        android:id="@+id/text_view_description_title"
        android:text="@string/city_detail_description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/contact_detail_labels_text_size"
        android:textStyle="bold"/>

    <View
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/contact_detail_divider_height"
        android:background="@color/divider_color"
        android:layout_marginBottom="@dimen/contact_detail_divider_margin_bottom">
    </View>

    <TextView
        android:id="@+id/text_view_city_description_value"
        android:text="Description Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/contact_detail_info_labels_margin_left"
        android:layout_marginBottom="@dimen/contact_detail_info_labels_margin_bottom"
        android:textSize="@dimen/contact_detail_labels_text_size"/>

    <TextView
        android:text="@string/city_detail_temperature_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/contact_detail_labels_text_size"
        android:textStyle="bold"/>

    <View
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/contact_detail_divider_height"
        android:background="@color/divider_color"
        android:layout_marginBottom="@dimen/contact_detail_divider_margin_bottom">
    </View>

    <TextView
        android:id="@+id/text_view_city_temperature_value"
        android:text="Temperature Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/contact_detail_labels_text_size"
        android:layout_marginLeft="@dimen/contact_detail_info_labels_margin_left"/>


    <TextView
        android:id="@+id/city_detail_humedity_label"
        android:text="@string/city_detail_humedity_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/contact_detail_labels_text_size"
        android:textStyle="bold"/>

    <View
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/contact_detail_divider_height"
        android:background="@color/divider_color"
        android:layout_marginBottom="@dimen/contact_detail_divider_margin_bottom">
    </View>


    <TextView
        android:id="@+id/text_view_city_humedity_value"
        android:text="Humedad Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/contact_detail_labels_text_size"
        android:layout_marginLeft="@dimen/contact_detail_info_labels_margin_left"/>


    <TextView
        android:text="@string/city_detail_wind_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/contact_detail_labels_text_size"
        android:textStyle="bold"/>

    <View
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/contact_detail_divider_height"
        android:background="@color/divider_color"
        android:layout_marginBottom="@dimen/contact_detail_divider_margin_bottom">
    </View>


    <TextView
        android:id="@+id/text_view_city_wind_value"
        android:text="Wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/contact_detail_labels_text_size"
        android:layout_marginLeft="@dimen/contact_detail_info_labels_margin_left"/>



</LinearLayout>